fixed footer button sizing on mobile devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1541,6 +1541,14 @@ header .user-avatar img {
 #nameGender-mobile {
   display: none; }
 
+.left-mobile-button {
+  width: 45% !important;
+  float: left !important; }
+
+.right-mobile-button {
+  width: 45% !important;
+  float: right !important; }
+
 @media (max-width: 749px) {
   #mobile-hook {
     display: none; }
